# velox

./: .eslintrc.js  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  LICENSE  NOTICE  README.md  app.json  eas.json  package-lock.json  package.json
.github/workflows/: build.yml  deploy-android.yml  deploy-ios.yml  deploy-website.yml
app/: _layout.tsx  fitness.tsx  heatmap.tsx  index.tsx  login.tsx  map.tsx  routes.tsx  settings.tsx  stats.tsx  training.tsx  wellness.tsx
app/activity/: [id].tsx
app/route/: [id].tsx
app/section/: [id].tsx
modules/route-matcher-native/: INTEGRATION.md  expo-module.config.json  package.json
modules/route-matcher-native/android/: build.gradle
modules/route-matcher-native/android/src/main/java/expo/modules/routematcher/: RouteMatcherModule.kt
modules/route-matcher-native/ios/: RouteMatcherModule.swift  RouteMatcherNative.podspec
modules/route-matcher-native/src/: RouteMatcherModule.ts  index.ts
rust/route-matcher/: Cargo.toml  README.md
rust/route-matcher/examples/: basic_matching.rs  batch_grouping.rs  http_benchmark.rs
rust/route-matcher/scripts/: build-android-dev.sh  build-android.sh  build-ios.sh  install-android.sh  install-ios.sh
rust/route-matcher/src/: geo_utils.rs  heatmap.rs  http.rs  lib.rs  sections.rs  sections_v2.rs
src/__tests__/: api.test.ts  fitness.test.ts  polyline.test.ts  routeMatching.test.ts
src/api/: client.ts  index.ts  intervals.ts
src/components/: index.ts
src/components/activity/: ActivityCard.tsx  ActivityDataChart.tsx  ActivityMapPreview.tsx  ChartTypeSelector.tsx  CombinedDataChart.tsx  CombinedPlot.tsx  ElevationChart.tsx  HRZonesChart.tsx  InsightfulStats.tsx  SingularPlot.tsx  index.ts
src/components/fitness/: ActivityDotsChart.tsx  FitnessChart.tsx  FitnessFormChart.tsx  FitnessSection.tsx  FitnessSummaryBadge.tsx  FormZoneChart.tsx  index.ts
src/components/maps/: ActivityMapView.tsx  ActivityTypeFilter.tsx  BaseMapView.tsx  HeatmapCellPopup.tsx  HeatmapLayer.tsx  Map3DWebView.tsx  RegionalMapView.tsx  TimelineSlider.tsx  index.ts
src/components/routes/: CacheScopeNotice.tsx  DiscoveredRouteRow.tsx  MatchQualityIndicator.tsx  MatchRow.tsx  ProcessingActivityList.tsx  ProcessingBanner.tsx  RouteCard.tsx  RouteMapView.tsx  RoutePerformanceSection.tsx  RouteRow.tsx  RoutesList.tsx  SectionMapView.tsx  SectionRow.tsx  SectionsList.tsx  index.ts
src/components/stats/: ActivityHeatmap.tsx  DecouplingChart.tsx  EventPlanner.tsx  FTPTrendChart.tsx  PaceCurveChart.tsx  PowerCurveChart.tsx  SeasonComparison.tsx  SwimPaceCurveChart.tsx  WeeklySummary.tsx  WorkoutLibrary.tsx  ZoneDistributionChart.tsx  index.ts
src/components/ui/: AnimatedPressable.tsx  Badge.tsx  Button.tsx  CacheLoadingBanner.tsx  CollapsibleSection.tsx  Divider.tsx  EmptyState.tsx  ErrorState.tsx  GarminAttribution.tsx  GradientCard.tsx  GradientText.tsx  MapFAB.tsx  Shimmer.tsx  index.ts
src/components/wellness/: WellnessDashboard.tsx  WellnessTrendsChart.tsx  index.ts
src/hooks/: index.ts  useActivities.ts  useActivityBoundsCache.ts  useAthlete.ts  useEFTPHistory.ts  useHeatmap.ts  useMetricSystem.ts  usePaceCurve.ts  usePowerCurve.ts  useSportSettings.ts  useTheme.ts  useWellness.ts  useZoneDistribution.ts
src/hooks/routes/: index.ts  useFrequentSections.ts  useRouteGroups.ts  useRouteMatch.ts  useRoutePerformances.ts  useRouteProcessing.ts
src/lib/: activityBoundsUtils.ts  activitySyncManager.ts  activityUtils.ts  adaptiveRateLimiter.ts  chartConfig.ts  constants.ts  fitness.ts  format.ts  geocoding.ts  gpsStorage.ts  haptics.ts  index.ts  polyline.ts  routeMatching.ts  routeProcessingQueue.ts  routeSignature.ts  routeStorage.ts  sectionOverlap.ts  spatialIndex.ts  streams.ts
src/providers/: AuthStore.ts  HRZonesStore.ts  MapPreferencesContext.tsx  QueryProvider.tsx  RouteMatchStore.ts  RouteSettingsStore.ts  SportPreferenceStore.ts  ThemeProvider.ts  index.ts
src/store/: authStore.ts
src/theme/: colors.ts  index.ts  shadows.ts  spacing.ts  typography.ts
src/types/: activity.ts  index.ts  mapbox-polyline.d.ts  routes.ts
